/home/fox/release/dtrace/2009/dtrace-20090407.tar.bz2

--- a/Changes
+++ b/Changes
@@ -1,4 +1,10 @@
+Tue Apr  7 23:55:48 2009  fox
+
+     224* systrace.c: Fix calling sequence for fork/vfork/iopl/sigaltstack.
+
 Mon Apr  6 21:54:17 2009  fox
+
+     223* Archive: 1.0078
 
      222* systrace.c: We broke 32-bit syscalls. Now fixed.
 
