--- a/Changes
+++ b/Changes
@@ -1,3 +1,12 @@
+Thu Apr 23 21:15:58 2009  fox
+
+     249* scripts/dt.pl -- make it more usable. This is to replace
+          the various scripts/*.d test examples.
+
+     248* dtrace_isa.c: Use copy_from_user to avoid kernel panic if
+          copyinstr() called on an argument which isnt a pointer type
+	  arg to a syscall.
+
 Wed Apr 22 21:00:26 2009  fox
 
      247* driver/cyclic_linux.c: Use old timers for non-hrtimer
