--- a/Changes
+++ b/Changes
@@ -1,3 +1,11 @@
+Tue May 12 20:34:40 2009  fox
+
+     268* Archive: 1.0088
+
+     267* driver/*: Fix compilation issues with earlier kernels regarding
+          placement of semaphores and atomic_t and related issues with
+	  mutex macros.
+
 Mon May 11 20:42:02 2009  fox
 
      266* Archive: 1.0087
