--- a/README
+++ b/README
@@ -1,11 +1,39 @@
 Linux port of DTrace
 
-Apr 2009
+June 2009
 Paul D. Fox
 fox@crisp.demon.co.uk
 http://www.twitter.com/crispeditor
 http://www.crisp.demon.co.uk
 
+Blog - latest news and stuff about the dtrace project:
+
+   http://www.crisp.demon.co.uk/blog/
+
+Download dtrace tarballs for linux here:
+
+   ftp://crisp.dynalias.com/pub/release/website/dtrace
+
+Introduction
+============
+
+This is a port of the Sun DTrace user and kernel code to Linux.
+No linux kernel code is touched in this build, but what is produced
+is a dynamically loadable kernel module. This avoids licensing
+issues and allows people to load and update dtrace as they desire.
+
+It also makes it more of a challenge than Solaris or FreeBSD or
+MacOSX, which have dtrace too, since we are trying to support old
+and new kernels, 32 and 64 bit kernels, and have to fit in with
+Linux's desire to change and evolve. So, if this works for you, great.
+If not, feel free to feedback what/why it doesnt work and we
+may be able to address the issues.
+
+The goal of this project is to ensure dtrace is everywhere - so
+that we can all benefit from faster systems and software, better
+kernels and generally be a good citizen to the user and administrators
+systems.
+  
 Licensing
 =========
 
@@ -13,6 +41,9 @@ The majority (if not all) of this code falls under Sun's CDDL
 license. Some files or headers may originate with GPL code, e.g.
 ELF libraries from GLIBC or RedHat. The original files
 copyrights are left intact, so please honour those as appropriate.
+Any files without an attributed copyright are likely my own
+invention and can be placed under the GPLv3, but this is a mixed-mode
+project, and it is not *my* right to give Dtrace away under GPL.
 
 Any mistakes or omissions in copyright attribution will be my mistake,
 so please let me know if there are such cases.
@@ -44,6 +75,11 @@ GIT Repository
 http://github.com/pmccormick/dtrace-for-linux/tree/master
 
 Thanks to Peter McCormick for setting this up.
+
+   NOTE: This is not the master archive for dtrace. Peter has
+   kindly set this up and it may lag the master releases. See
+   the links at the top of this document for the current homepage
+   data.
 
 Installation
 ============
