--- a/Changes
+++ b/Changes
@@ -1,3 +1,9 @@
+Mon Jun 22 21:03:36 2009  fox
+
+     313* Archive: 1.0098
+
+     312* dt_proc.c: Handle -p <pid> command line switch.
+
 Sun Jun 21 21:27:25 2009  fox
 
      311* rchive: 1.0097
