--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+Mon Jul 12 22:24:58 2010  fox
+
+     345* systrace.c: Fix clone() syscall for 2.6.32/64 bit kernel.
+
 Sun Jul 11 21:40:15 2010  fox
 
      344* dtrace_linux.c: dtrace_xcall: Dont call on_each_cpu as its not
