/home/fox/release/dtrace/2010/dtrace-20100725.tar.bz2

--- a/Changes
+++ b/Changes
@@ -1,3 +1,15 @@
+Sun Jul 25 20:18:41 2010  fox
+
+     360* archive: 1.0103
+
+     359* sdt_linux.c: Add io::start and io::done exits.
+
+     358* prov_common.c: Add dtrace_function_size() utility.
+
+     357* driver/dis_tables.c: Grab this from Darwin-10.6.4. It has the
+          fixes needed to support multibyte nop instructions and a silly
+	  coding error in handling mode operations.
+
 Fri Jul 16 23:56:16 2010  fox
 
      356* fbt_linux.c, prov_common.c: Migrate the function parser code
