--- a/Changes
+++ b/Changes
@@ -1,3 +1,15 @@
+Thu Jul 29 00:10:39 2010  fox
+
+     373* dtrace_isa.c: Fix dtrace_copyin: Had args reversed in copy_from_user.
+          Cause copyinstr() to panic the kernel.
+
+     372* archive: 1.0106
+
+     371* privregs.h, sdt_linux.c: Get the proper args to the calling function
+          for the probe from user space. Now io::start has the right
+	  arg0, arg1, ..., but we still havent made available a working
+	  io.d and no fileinfo_t (etc) args.
+
 Wed Jul 28 08:42:55 2010  fox
 
      370* libdtrace/dt_lex.l: Better // handling.
